It works! Basic on-the-hour every-hour timer
Former-commit-id: 85d85f7c020cd2baa532488000e4906b365b54e3

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 *rtaudio-4.1.2
 Debug
 includertaudio
+.vscode
+.vs
+chronicle.VC.*
+
+# Don't upload the libs in the directory, use the /libs instead
+libsndfile-1*
