Remove VS project info from git tree
Former-commit-id: 48cd36d48cfcbe2648f2f7333f72bb9f877736dc

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ includertaudio
 .vscode
 .vs
 chronicle.VC.*
+chronicle.vcx*
 
 # Don't upload the libs in the directory, use the /libs instead
 libsndfile-1*
