--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,7 @@ includertaudio
 chronicle.VC.*
 chronicle.vcx*
 
+*.wav
+
 # Don't upload the libs in the directory, use the /libs instead
 libsndfile-1*
