--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,18 @@ script: make linux
 compiler: gcc
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install librtaudio-dev libncurses5-dev libsndfile1-dev libboost-all-dev libmp3lame-dev
+- sudo apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2
+- wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.0.0.tar.gz
+- tar xvf rtaudio-*
+- cd rtaudio*
+- ./configure --with-alsa
+- make
+- sudo make install
+- cd ..
+- wget https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
+- tar xvf lame-*
+- cd lame-*
+- ./configure --disable-encoder
+- make
+- sudo make install
+- cd ../chronicle
