--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = chronicle
 chronicle_SOURCES = chronicle.cpp
 
-AM_CFLAGS=$(rtaudio_cflags) $(sndfile_cflags)
-LIBS=$(rtaudio_libs) $(sndfile_libs)
+ACLOCAL_AMFLAGS = -I .
+
+AM_CFLAGS=$(rtaudio_cflags) $(sndfile_cflags) $(BOOST_CPPFLAGS)
+AM_LDFLAGS=$(BOOST_FILESYSTEM_LDFLAGS)
+LIBS=$(rtaudio_libs) $(sndfile_libs) $(BOOST_FILESYSTEM_LIBS)
