--- a/Makefile.am
+++ b/Makefile.am
@@ -4,5 +4,5 @@ chronicle_SOURCES = chronicle.cpp
 ACLOCAL_AMFLAGS = -I .
 
 AM_CFLAGS=$(rtaudio_cflags) $(sndfile_cflags) $(BOOST_CPPFLAGS)
-AM_LDFLAGS=$(BOOST_FILESYSTEM_LDFLAGS)
-LIBS=$(rtaudio_libs) $(sndfile_libs) $(BOOST_FILESYSTEM_LIBS)
+AM_LDFLAGS=$(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS)
+LIBS=$(rtaudio_libs) $(sndfile_libs) $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS)
