--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,13 @@ Makefile
 /ltoptions.m4
 /ltsugar.m4
 /ltversion.m4
+/build-aux/compile
+/build-aux/depcomp
+/build-aux/install-sh
+/build-aux/libtool.m4
+/build-aux/lt~obsolete.m4
+/build-aux/ltmain.sh
+/build-aux/ltoptions.m4
+/build-aux/ltsugar.m4
+/build-aux/ltversion.m4
+/build-aux/missing
