--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,8 +3,8 @@ container:
 
 install_deps_task:
   script:
-    - sudo apt-get update -qq
-    - sudo apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2 libasound2-dev
+    - apt-get update -qq
+    - apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2 libasound2-dev
 
 build_task:
   depends_on:
