--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ container:
 install_deps_task:
   script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2 libasound2-dev
+    - apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2 libasound2-dev -qq -y
 
 build_task:
   depends_on:
