re-add boost deps, see if this works

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,7 +6,9 @@ build_task:
     - install_deps
   apt_script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev libboost-filesystem-dev libboost-system-dev libasound2 libasound2-dev -qq -y
+    #- apt-get install libncurses5-dev libsndfile1-dev libboost-filesystem-dev libboost-system-dev libboost-dev libasound2 libasound2-dev -qq -y
+    - apt-get install libncurses5-dev libsndfile1-dev libboost-all-dev libasound2 libasound2-dev -qq -y
+
   lame_cache:
     folder: lame
     populate_script:
@@ -30,6 +32,7 @@ build_task:
       - ./configure
       - make
       - make install
+
   build_script:
   - chmod +x autogen.sh
   - ./autogen.sh
