--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,7 +14,7 @@ build_task:
     folder: boost_1_68_0
     populate_script:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
-      - tar xf boost_1_68_0
+      - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
       - ./bootstrap
       - ./b2 install
