--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,7 +16,7 @@ build_task:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
-      - ./bootstrap
+      - ./bootstrap.sh
       - ./b2 install
   
   lame_cache:
