--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,7 +15,10 @@ linux_build_task:
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
       - ./bootstrap.sh --with-libraries=system,filesystem
-      - ./b2 install
+  
+  boost_build_script:
+    - cd boost_1_68_0
+    - ./b2 install
   
   lame_cache:
     folder: lame-3.100
@@ -24,8 +27,11 @@ linux_build_task:
       - tar xf lame-*
       - cd lame-3.100
       - ./configure --disable-decoder
-      - make
-      - make install
+  
+  lame_build_script:
+    - cd lame-3.100
+    - make
+    - make install
 
   rtaudio_cache: 
     folder: rtaudio-5.0.0
@@ -34,8 +40,11 @@ linux_build_task:
       - tar xf rtaudio-*
       - cd rtaudio-5.0.0
       - ./configure
-      - make
-      - make install
+
+  rtaudio_build_script:
+    - cd rtaudio-5.0.0
+    - make
+    - make install
 
   build_script:
   - chmod +x autogen.sh
@@ -56,9 +65,12 @@ windows_build_task:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
-      - echo "using gcc ':' ':' i686-w64-mingw32-g++ ;" > user-config.jam
+      - echo "using gcc :' i686-w64-mingw32-g++ ;" > user-config.jam
       - ./bootstrap.sh --with-libraries=system,filesystem
-      - ./b2 --user-config=user-config.jam toolset=gcc-mingw target-os=windows release
+  
+  boost_build_script:
+    - cd boost_1_68_0
+    - ./b2 --user-config=user-config.jam toolset=gcc-mingw target-os=windows release
   
   lame_cache:
     folder: lame-3.100
@@ -67,8 +79,11 @@ windows_build_task:
       - tar xf lame-*
       - cd lame-3.100
       - ./configure --disable-decoder --host=x86_64-w64-mingw32
-      - make
-      - make install
+  
+  lame_build_script:
+    - cd lame-3.100
+    - make
+    - make install
 
   rtaudio_cache: 
     folder: rtaudio-5.0.0
@@ -77,8 +92,11 @@ windows_build_task:
       - tar xf rtaudio-*
       - cd rtaudio-5.0.0
       - ./configure --host=x86_64-w64-mingw32
-      - make
-      - make install
+
+  rtaudio_build_script:
+    - cd rtaudio-5.0.0
+    - make
+    - make install
 
   build_script:
   - chmod +x autogen.sh
