--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -65,12 +65,12 @@ windows_build_task:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
-      - 'echo "using gcc : : i686-w64-mingw32-g++ ;" > user-config.jam'
+      - 'echo "using gcc : : i686-w64-mingw32-gcc ;" > user-config.jam'
       - ./bootstrap.sh --with-libraries=system,filesystem
   
   boost_build_script:
     - cd boost_1_68_0
-    - ./b2 --user-config=user-config.jam toolset=gcc-mingw target-os=windows release
+    - ./b2 --user-config=user-config.jam toolset=gcc-mingw-w64-x86-64 target-os=windows release
   
   lame_cache:
     folder: lame-3.100
