try following the docs and using the right toolset

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -65,12 +65,13 @@ windows_build_task:
       - wget https://dl.bintray.com/boostorg/release/1.68.0/source/boost_1_68_0.tar.gz
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
-      - 'echo "using gcc : : x86_64-w64-mingw32-gcc ;" > user-config.jam'
+      #- 'echo "using gcc : : x86_64-w64-mingw32-gcc ;" > user-config.jam'
       - ./bootstrap.sh --with-libraries=system,filesystem
   
   boost_build_script:
   - cd boost_1_68_0
-  - ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86
+  #- ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86
+  - ./b2 --user-config=user-config.jam toolset=gcc-mingw target-os=windows release address-model=64 architecture=x86
   
   lame_cache:
     folder: lame-3.100
