--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -66,11 +66,11 @@ windows_build_task:
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
       - 'echo "using gcc : : x86_64-w64-mingw32-gcc ;" > user-config.jam'
-      - ./bootstrap.sh --with-libraries=system,filesystem
+      - ./bootstrap.sh --with-libraries=system,filesystem --prefix=/usr/local
   
   boost_build_script:
   - cd boost_1_68_0
-  - ./b2 --user-config=user-config.jam --prefix=/usr/local toolset=gcc target-os=windows release address-model=64 architecture=x86
+  - ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86
   #- ./b2 toolset=gcc-mingw target-os=windows release address-model=64 architecture=x86
   
   lame_cache:
