--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -70,7 +70,7 @@ windows_build_task:
   
   boost_build_script:
   - cd boost_1_68_0
-  - ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86
+  - ./b2 --user-config=user-config.jam toolset=gcc target-os=windows release address-model=64 architecture=x86 install
   #- ./b2 toolset=gcc-mingw target-os=windows release address-model=64 architecture=x86
   
   lame_cache:
