--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -52,7 +52,9 @@ linux_build_task:
   - ./configure && make
 
 windows_build_task:
+  # Most sources need to be built from scratch, since the mingw version of pkg-config ignores PKG_CONFIG_PATH
   env:
+    # Let's do it just for conveniences' sake
     PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
   container:
     image: gcc:latest
@@ -69,7 +71,7 @@ windows_build_task:
       - cd alsa-lib-1.1.6
       - ./configure --prefix=/usr
     
-  alsa_build:
+  alsa_build_script:
     - cd alsa-lib-1.1.6
     - make install
 
