--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -82,7 +82,7 @@ windows_build_task:
       - tar xf boost_1_68_0.tar.gz
       - cd boost_1_68_0
       - 'echo "using gcc : : x86_64-w64-mingw32-gcc ;" > user-config.jam'
-      - ./bootstrap.sh --with-libraries=system,filesystem --prefix=/usr
+      - ./bootstrap.sh --with-libraries=system,filesystem --prefix=/usr/local
   
   boost_build_script:
   - cd boost_1_68_0
