--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -53,15 +53,15 @@ linux_build_task:
 
 windows_build_task:
   # Most sources need to be built from scratch, since the mingw version of pkg-config ignores PKG_CONFIG_PATH
-  env:
+  #env:
     # Let's do it just for conveniences' sake
-    PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
+    #PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
   container:
     image: gcc:latest
 
   apt_script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 mingw-w64-tools -qq -y
+    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config -qq -y
 
   alsa_cache:
     folder: alsa-lib-1.1.6.tar.bz2
