use our version of pkg-config

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -55,13 +55,13 @@ windows_build_task:
   # Most sources need to be built from scratch, since the mingw version of pkg-config ignores PKG_CONFIG_PATH
   #env:
     # Let's do it just for conveniences' sake
-    #PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
+    PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
   container:
     image: gcc:latest
 
   apt_script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config -qq -y
+    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 pkg-config -qq -y
 
   alsa_cache:
     folder: alsa-lib-1.1.6.tar.bz2
@@ -69,7 +69,7 @@ windows_build_task:
       - wget ftp://ftp.alsa-project.org/pub/lib/alsa-lib-1.1.6.tar.bz2
       - tar xjf alsa-lib-1.1.6.tar.bz2
       - cd alsa-lib-1.1.6
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32
+      - ./configure --prefix=/usr/local/
     
   alsa_build_script:
     - cd alsa-lib-1.1.6
@@ -108,7 +108,7 @@ windows_build_task:
       - wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.0.0.tar.gz
       - tar xf rtaudio-*
       - cd rtaudio-5.0.0
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32
+      - ./configure --prefix=/usr/local
 
   rtaudio_build_script:
     - cd rtaudio-5.0.0
