--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -61,7 +61,7 @@ windows_build_task:
 
   apt_script:
     - apt-get update -qq
-    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config -qq -y
+    - apt-get install libncurses5-dev libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config libtool -qq -y
 
   ncurses_cache:
     folder: ncurses-6.1
@@ -69,7 +69,12 @@ windows_build_task:
       - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
       - tar xf ncurses-6.1.tar.gz
       - cd ncurses-6.1.tar.gz
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
+      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32 --with-libtool
+  
+  ncurses_build_script:
+    - cd ncurses-6.1
+    - make
+    - make install    
 
   alsa_cache:
     folder: alsa-lib-1.1.6.tar.bz2
