--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,7 +68,7 @@ windows_build_task:
     populate_script:
       - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
       - tar xf ncurses-6.1.tar.gz
-      - cd ncurses-6.1.tar.gz
+      - cd ncurses-6.1
       - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32 --with-libtool
   
   ncurses_build_script:
