--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -61,7 +61,7 @@ windows_build_task:
 
   apt_script:
     - apt-get update -qq
-    - apt-get install libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config libtool -qq -y
+    - apt-get install libsndfile1-dev mingw-w64 mingw-w64-tools pkg-config -qq -y
 
   ncurses_cache:
     folder: ncurses-6.1
@@ -69,7 +69,7 @@ windows_build_task:
       - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
       - tar xf ncurses-6.1.tar.gz
       - cd ncurses-6.1
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32 --with-libtool
+      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
   
   ncurses_build_script:
     - cd ncurses-6.1
