--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -69,7 +69,7 @@ windows_build_task:
       - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
       - tar xf ncurses-6.1.tar.gz
       - cd ncurses-6.1
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
+      - ./configure --enable-term-driver --enable-sp-funcs --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
   
   ncurses_build_script:
     - cd ncurses-6.1
