--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -55,7 +55,7 @@ windows_build_task:
   # Most sources need to be built from scratch, since the mingw version of pkg-config ignores PKG_CONFIG_PATH
   env:
     # Let's do it just for conveniences' sake
-    PKG_CONFIG_PATH: /usr/local/x86_64-w64-mingw32/lib/pkgconfig
+    PKG_CONFIG_PATH: /usr/local/lib/pkgconfig
   container:
     image: gcc:latest
 
@@ -69,7 +69,8 @@ windows_build_task:
       - wget ftp://ftp.invisible-island.net/ncurses/ncurses-6.1.tar.gz
       - tar xf ncurses-6.1.tar.gz
       - cd ncurses-6.1
-      - ./configure --enable-term-driver --enable-sp-funcs --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
+      - ./configure --enable-term-driver --enable-sp-funcs --host=x86_64-w64-mingw32
+      #--prefix=/usr/local/x86_64-w64-mingw32
   
   ncurses_build_script:
     - cd ncurses-6.1
@@ -82,7 +83,8 @@ windows_build_task:
       - wget ftp://ftp.alsa-project.org/pub/lib/alsa-lib-1.1.6.tar.bz2
       - tar xjf alsa-lib-1.1.6.tar.bz2
       - cd alsa-lib-1.1.6
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32 --host=x86_64-w64-mingw32
+      - ./configure --host=x86_64-w64-mingw32
+      #--prefix=/usr/local/x86_64-w64-mingw32
     
   alsa_build_script:
     - cd alsa-lib-1.1.6
@@ -121,7 +123,8 @@ windows_build_task:
       - wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.0.0.tar.gz
       - tar xf rtaudio-*
       - cd rtaudio-5.0.0
-      - ./configure --prefix=/usr/local/x86_64-w64-mingw32
+      - ./configure 
+      #--prefix=/usr/local/x86_64-w64-mingw32
 
   rtaudio_build_script:
     - cd rtaudio-5.0.0
