Use DSound, not alsa on windows

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -75,20 +75,22 @@ windows_build_task:
   ncurses_build_script:
     - cd ncurses-6.1
     - make
-    - make install    
-
-  alsa_cache:
-    folder: alsa-lib-1.1.6.tar.bz2
-    populate_script:
-      - wget ftp://ftp.alsa-project.org/pub/lib/alsa-lib-1.1.6.tar.bz2
-      - tar xjf alsa-lib-1.1.6.tar.bz2
-      - cd alsa-lib-1.1.6
-      - ./configure --host=x86_64-w64-mingw32
-      #--prefix=/usr/local/x86_64-w64-mingw32
-    
-  alsa_build_script:
-    - cd alsa-lib-1.1.6
     - make install
+
+  ### YOU'RE BUILDING FOR WINDOWS, WHY ARE YOU EVEN TRYING TO USE ALSA AND NOT DSOUND FOR RTAUDIO???
+
+  #alsa_cache:
+  #  folder: alsa-lib-1.1.6.tar.bz2
+  #  populate_script:
+  #    - wget ftp://ftp.alsa-project.org/pub/lib/alsa-lib-1.1.6.tar.bz2
+  #    - tar xjf alsa-lib-1.1.6.tar.bz2
+  #    - cd alsa-lib-1.1.6
+  #    - ./configure --host=x86_64-w64-mingw32
+  #    #--prefix=/usr/local/x86_64-w64-mingw32
+    
+  #alsa_build_script:
+  #  - cd alsa-lib-1.1.6
+  #  - make install
 
   boost_cache:
     folder: boost_1_68_0
@@ -123,7 +125,7 @@ windows_build_task:
       - wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.0.0.tar.gz
       - tar xf rtaudio-*
       - cd rtaudio-5.0.0
-      - ./configure 
+      - ./configure --with-dsound --without-alsa
       #--prefix=/usr/local/x86_64-w64-mingw32
 
   rtaudio_build_script:
