--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -159,4 +159,4 @@ windows_build_task:
     #- pkg-config rtaudio --debug
     - chmod +x autogen.sh
     - ./autogen.sh
-    - ./configure --disable-shared --enable-static --host=x86_64-w64-mingw32 && make
+    - ./configure --disable-shared --enable-static --host=x86_64-w64-mingw32 --prefix=/usr/local && make
