Modify Makefile.am and configure.ac for correct compiler vars

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_LANG(C++)
 AC_PROG_CPP
 AC_PROG_CXX
-AC_PROG_LIBTOOL
+LT_INIT
 BOOST_REQUIRE([1.65.0])
 BOOST_FILESYSTEM(mt)
 BOOST_SYSTEM
